<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">NotePad</string>
    <string name="live_folder_name">Notes</string>

    <string name="title_edit_title">Note title:</string>
    <string name="title_create">New note</string>
    <string name="title_edit">Edit: %1$s</string>
    <string name="title_notes_list">Notes</string>
    <string name="title_notes_search">查找</string>

    <string name="menu_add">新建</string>
    <string name="menu_save">保存</string>
    <string name="menu_delete">删除</string>
    <string name="menu_open">打开</string>
    <string name="menu_revert">Revert changes</string>
    <string name="menu_copy">复制</string>
    <string name="menu_paste">粘贴</string>
    <string name="menu_search">查找</string>
    <string name="menu_output">导出笔记</string>
    <string name="menu_sort">排序</string>
    <string name="menu_sort1">创建时间</string>
    <string name="menu_sort2">修改时间</string>
    <string name="menu_sort3">颜色</string>
    <string name="menu_color">换背景</string>
    <string name="menu_font_size">字体大小</string>
    <string name="menu_font_color">字体颜色</string>

    <string name="font_10">10号</string>
    <string name="font_15">15号</string>
    <string name="font_20">20号</string>
    <string name="red_font">红色</string>
    <string name="black_font">黑色</string>
    <string name="blue_font">蓝色</string>

    <string name="output_name">导出名字</string>
    <string name="output_ok">确认导出</string>


    <string name="button_ok">OK</string>
    <string name="text_title">标题:</string>

    <string name="resolve_edit">编辑</string>
    <string name="resolve_title">编辑标题</string>

    <string name="error_title">Error</string>
    <string name="error_message">Error loading note</string>
    <string name="nothing_to_save">There is nothing to save</string>
</resources>